Make MessageHub calls synchronous + fixed chart update timing

--- a/server/dashboard/styl/index.styl
+++ b/server/dashboard/styl/index.styl
@@ -13,6 +13,15 @@
     padding-top			15px
     padding-bottom		10px
     
+.sparkTwitter__stats
+    background          transparent
+    
+.stats
+    color               #fafafa
+    font-size           large
+    text-align          left
+    padding-top         0px
+    
 .credits
     position			absolute
     color				#fafafa
